--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,41 @@
 body{
-  background-color: rgb(203, 55, 55);
+  background-image: url('images/restaurant-2.jpeg');
+  background-size: contain;
+  background-color: rgb(229, 208, 182);
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1;
+  
+}
+header{
+  width: 100%;
+}
+nav{
+position: sticky;
+width: 100%; 
+padding: 20px;
+display: flex;
+flex-direction: row;
+left: 0;
+
+
+}
+nav ul{
+  width: 100;
+  list-style-type: none;
+  justify-content: space-between;
+  
+}
+nav ul li{
+display: inline;
+margin: 10px;
+}
+nav ul li a{
+text-decoration: none;
+color: black;
+font-size: large;
+}
+nav ul li a:hover{
+  background-color: rgb(200, 198, 198);
+  color: black;
 }
