--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
 body{
   background-image: url('images/restaurant-2.jpeg');
   background-size: contain;
@@ -15,20 +23,24 @@ position: sticky;
 width: 100%; 
 padding: 20px;
 display: flex;
+align-items: center;
 flex-direction: row;
+-webkit-box-align: center;
 left: 0;
-
-
+}
+nav a img{
+  margin-right: 250px;
 }
 nav ul{
-  width: 100;
+  width: 100%;
+  margin: 20px;
   list-style-type: none;
   justify-content: space-between;
-  
+
 }
 nav ul li{
 display: inline;
-margin: 10px;
+margin: 30px;
 }
 nav ul li a{
 text-decoration: none;
