--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,14 @@
 
 
 body{
-  background-image: url('images/restaurant-2.jpeg');
+  background-image: url('images/backgrounds/restaurant-3.jpeg');
   background-size: contain;
   background-color: rgb(229, 208, 182);
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1;
+  color: rgb(246, 241, 241);
+  
   
 }
 header{
@@ -44,10 +46,37 @@ margin: 30px;
 }
 nav ul li a{
 text-decoration: none;
-color: black;
+color: rgb(252, 250, 250);
 font-size: large;
+
 }
 nav ul li a:hover{
   background-color: rgb(200, 198, 198);
   color: black;
+}
+.main-content{
+  padding-top: 50px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-content p{
+  padding: 10px;
+  font-size: large;
+}
+.main-content button{
+  font-size: large;
+  background-color: transparent;
+  margin-top: 10px;
+}
+.main-content button a{
+  text-decoration: none;
+  color: rgb(200, 198, 198);
+  background-color: transparent;
+  background-size: cover;
+  
+  border: 2px  rgb(200, 198, 198) solid;
+  border-radius: 3px;
+  padding: 8px;
 }
