--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,11 @@
 
 body{
   background-size: contain;
-  background-color: rgb(45, 44, 44);
+  background-color: rgba(255, 255, 255, 0.952);
   display: block;
   font-family: 'Times New Roman', Times, serif;
   line-height: 1;
-  color: rgb(246, 241, 241);
+  color: black;
   text-align: center;
   
   
@@ -31,6 +31,7 @@ header{
   padding: 10px;
   position: sticky;
   top: 0;
+  color: rgb(246, 241, 241)
 }
 nav{
 width: 100%; 
@@ -89,6 +90,7 @@ nav ul li a:hover{
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: rgb(246, 241, 241)
   
 }
 .main-content p{
@@ -139,7 +141,7 @@ nav ul li a:hover{
 
 #reviews{
   padding: 50px;
-  background-color: rgba(244, 173, 115, 0.449);
+  
 }
 #reviews h2{
   font-size: xx-large;
@@ -173,13 +175,17 @@ nav ul li a:hover{
   padding: 10px;
 }
 .col-1, .col-4{
- background-color:rgba(146, 105, 72, 0.449) ;
+ background-color:white ;
 }
 .col-2, .col-3{
- background-color: rgba(244, 173, 115, 0.449);
+ background-color: rgb(228, 226, 223);
 }
 .details{
 padding: 20px;
+}
+#contact{
+  color: white;
+  background-color: rgb(45, 44, 44);;
 }
 #contact h2{
   font-size: xx-large;
@@ -196,11 +202,50 @@ padding: 20px;
   height: 100%;
   
   
+  
 }
 .opening-times, .awards{
   border-right: 1px solid;
   padding-right: 150px;
   
 }
-
-
+.res-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: xx-large;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  padding: 30px;
+  background: url(images/food/food-2.jpeg);
+  background-size: 90%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  color: aliceblue;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);;
+}
+.res-container p{
+  text-transform: uppercase;
+  font-size: large;
+  padding: 10px;
+}
+.info{
+  padding: 30px;
+  margin-top: 20px;
+  font-size: large;
+}
+.res-secton{
+  display: flex;
+  flex-direction: column;
+}
+.inputs-for-res{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+  
+}
+.date-input, .time-input, .partysize-input{
+  padding: 20px;
+}
