--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@
   box-sizing: border-box;
 }
 
-
-
-
 body{
   background-size: contain;
   background-color: rgba(255, 255, 255, 0.952);
@@ -31,19 +28,21 @@ header{
   padding: 10px;
   position: sticky;
   top: 0;
-  color: rgb(246, 241, 241)
+  background-color: white;
+  color: black;
 }
 nav{
-width: 100%; 
-padding: 10px;
-display: flex;
-align-items: center;
-flex-direction: row;
--webkit-box-align: center;
-left: 0;
+  width: 100%; 
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  -webkit-box-align: center;
+  left: 0;
+
 }
 nav a img{
-  margin-right: 250px;
+  margin-right: 150px;
 }
 nav ul{
   width: 100%;
@@ -53,15 +52,17 @@ nav ul{
 
 }
 nav ul li{
-display: inline;
-margin: 30px;
+  display: inline-block;
+  padding: 0 40px;
+  border-right: 1px solid black;
+}
+nav ul li:last-child {
+  border-right: none;
 }
 nav ul li a{
-text-decoration: none;
-color: rgb(252, 250, 250);
-font-size: larger;
-
-
+  text-decoration: none;
+  color: black;
+  font-size: larger;
 }
 nav ul li a:hover{
   color: rgb(234, 209, 175);
@@ -74,14 +75,14 @@ nav ul li a:hover{
   flex-direction: row;
   justify-content: space-between;
   margin-left: 70px;
-  margin-right: 70px;
+  margin-right: 40px;
 }
 .social-media-links-item{
   width: 40px;
   padding: 20px;
 }
 .fa-brands{
-  color: white;
+  color: black !important;
 }
 
 .main-content{
@@ -116,29 +117,6 @@ nav ul li a:hover{
   text-decoration: underline;
   color: rgb(234, 209, 175);
 }
-
-
-.owners{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-.owner-1{
-  flex-grow: 1;
-  width: 50%;
-}
-.owner-2{
-  flex-grow: 1;
-  width: 50%;
-
-
-}
-.owner-1 img, .owner-2 img{
-  width: 60%;
-  height: 50%;
-  position: relative;
-}
-
 #reviews{
   padding: 50px;
   
@@ -223,33 +201,23 @@ padding: 20px;
   background-repeat: no-repeat;
   background-color: transparent;
   color: aliceblue;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);;
-}
-.res-container p{
-  text-transform: uppercase;
-  font-size: large;
-  padding: 10px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 .info{
   padding: 30px;
   margin-top: 20px;
   font-size: large;
 }
-.res-secton{
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 30px;
-}
 .book-a-table{
   font-size: x-large;
 }
+
+
 .inputs-for-res{
   display: grid;
-  
   gap: 10px;
   align-items: center;
-  
-  
+  padding-bottom: 20px;
 }
 .date-input, .time-input, .partysize-input{
   padding: 10px;
@@ -262,4 +230,54 @@ label{
 #date, #time, #party-size{
   padding: 5px 10px;
   
+}
+.next-button{
+  padding: 10px 30px;
+  font-size: medium;
+  margin-bottom: 30px;
+
+  
+}
+.next-button:hover{
+  background-color: rgb(45, 44, 44);
+  color: white;
+}
+
+.about-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: xx-large;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  padding: 120px;
+  background: url(images/food/food-4.jpeg);
+  background-size: 90%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  color: aliceblue;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.story-box{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding-top: 50px;
+}
+.owner-1{
+  
+  width: 33.3%;
+}
+.story-info{
+  width: 33.3%;
+}
+.story-info h1{
+  padding-bottom: 20px;
+}
+.owner-2{
+  width: 33.3%;
+}
+.owner-1 img, .owner-2 img{
+  position: relative;
 }
