--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ nav ul{
 }
 nav ul li{
   display: inline-block;
-  padding: 0 40px;
+  padding: 0 30px;
   border-right: 1px solid black;
 }
 nav ul li:last-child {
@@ -62,7 +62,8 @@ nav ul li:last-child {
 nav ul li a{
   text-decoration: none;
   color: black;
-  font-size: larger;
+  font-size: large;
+  text-transform: uppercase;
 }
 nav ul li a:hover{
   color: rgb(234, 209, 175);
@@ -82,9 +83,29 @@ nav ul li a:hover{
   padding: 20px;
 }
 .fa-brands{
-  color: black !important;
+  color: black ;
+}
+.index-header{
+  background-color: transparent;
+}
+.index-header nav ul li{
+  border-right: 1px solid white;
+}
+.index-header nav ul li:last-child {
+  border-right: none;
+}
+.index-header nav ul li a{
+  color: white ;
+  font-weight: bold;
+  font-size: large;
+}
+.index-header .fa-brands{
+  color: white;
 }
 
+.change{
+  background-color: white;
+}
 .main-content{
   padding-top: 120px;
   padding-bottom: 277px;
@@ -112,11 +133,10 @@ nav ul li a:hover{
   background-color: transparent;
   background-size: cover;
 }
-.main-content button:hover a{
-  color: rgb(234, 209, 175);
-  text-decoration: underline;
-  color: rgb(234, 209, 175);
+.main-content button:hover{
+  background-color: rgb(221, 108, 15);
 }
+
 #reviews{
   padding: 50px;
   
@@ -125,39 +145,40 @@ nav ul li a:hover{
   font-size: xx-large;
 }
 
-.row-a, .row-b{
+.review-slides{
   position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  width: 100%;
+  max-width: 800px;
+  height: 160px;
+  overflow: hidden;
   align-items: center;
-  margin: 40px ;
   font-size: larger;
-  
-
-
-}
-.col-1, .col-2, .col-3, .col-4{
-  padding: 20px 50px;
-  width: 50%;
-  height: 200px;
-  
-  font-size: larger;
-  text-align: left;
+  margin: auto;
   
 }
-.col-1 i, .col-2 i, .col-3 i, .col-4 i{
+.slide{
+  display: none;
+  padding: 50px 50px;
+  font-size: larger;
+  letter-spacing: 4px;
+  text-align: center;
+  align-items: center;
+  color: rgb(48, 62, 71);
+  
+  
+}
+.slide i{
   text-transform: uppercase;
 }
-.col-1 p, .col-2 p, .col-3 p, .col-4 p{
+.slide p{
   padding: 10px;
+  font-size: medium;
 }
-.col-1, .col-4{
- background-color:white ;
+.slide.active{
+  display: block;
+  
 }
-.col-2, .col-3{
- background-color: rgb(228, 226, 223);
-}
+
 .details{
 padding: 20px;
 }
