--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,16 @@ nav ul li a:hover{
 .main-content button:hover{
   background-color: rgb(221, 108, 15);
 }
+#gallery h2{
+  text-align: center;
+  font-size: xx-large;
+  padding: 50px;
+}
+#gallery img{
+  border-radius: 20px;
+  padding-bottom: 30px;
+}
+
 
 #reviews{
   padding: 50px;
@@ -190,16 +200,23 @@ nav ul li a:hover{
   
 }
 
-.details{
-padding: 20px;
-}
-#contact{
-  color: white;
-  background-color: rgb(45, 44, 44);;
-}
 #contact h2{
   font-size: xx-large;
   padding-top: 30px;
+}
+.location-and-details-container{
+  display: flex;
+  flex-direction: row;
+  padding: 40px;
+}
+.details{
+  padding: 130px;
+  font-size: xx-large;
+  }
+footer{
+  background-color: rgb(45, 44, 44);
+  padding-bottom: 20px;
+  color: white;
 }
 .container-contact{
   display: flex;
@@ -209,6 +226,7 @@ padding: 20px;
   padding-left: 200px;
   padding-right: 200px;
   padding-bottom: 50px;
+  padding-top: 30px;
   height: 100%;
   
   
@@ -225,6 +243,7 @@ padding: 20px;
   padding-right: 150px;
   
 }
+
 .res-container{
   display: flex;
   flex-direction: column;
