--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ nav ul li a:hover{
 .change{
   background-color: white;
 }
+
 .main-content{
   padding-top: 120px;
   padding-bottom: 277px;
@@ -128,7 +129,7 @@ nav ul li a:hover{
 }
 .main-content p{
   padding: 10px;
-  font-size: large;
+  font-size: larger;
 }
 .main-content button{
   font-size: large;
@@ -212,10 +213,17 @@ nav ul li a:hover{
   padding: 130px;
   font-size: xx-large;
   }
+.details{
+  font-size: large;
+  }
+.details a{
+  color: rgb(221, 108, 15);
+  }
 footer{
   background-color: rgb(45, 44, 44);
   padding-bottom: 20px;
   color: white;
+  
 }
 .container-contact{
   display: flex;
@@ -231,14 +239,7 @@ footer{
   
   
 }
-.details{
-  font-size: large;
-}
-.details a{
-  color: rgb(221, 108, 15);
-}
 .opening-times .awards{
-  border-right: 1px solid;
   padding-right: 150px;
   
 }
@@ -301,7 +302,9 @@ label{
   width: auto;
 }
 .next-button:hover{
-  background-color: rgb(45, 44, 44);
+  background-color: rgb(221, 108, 15);
+  border-color: rgb(221, 108, 15);
+  border-radius: 5px;
   color: white;
 }
 .personal-details-section{
@@ -310,6 +313,10 @@ label{
   gap: 10px;
   align-items: center;
   padding-bottom: 40px;
+}
+.personal-details-section h2{
+  font-weight: normal;
+  padding-bottom: 20px;
 }
 #fname, #lname, #phone, #email{
   padding-top: 8px;
@@ -329,6 +336,12 @@ label{
   align-self: center;
   width: auto;
 }
+.back-button:hover , .submit-button:hover{
+  background-color: rgb(221, 108, 15);
+  border-color: rgb(221, 108, 15);
+  border-radius: 5px;
+  color: white;
+}
 
 .about-container{
   display: flex;
@@ -346,26 +359,82 @@ label{
   color: aliceblue;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
-.story-box{
+.story-box {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 50px;
+  max-width: 1000px;
+  margin: 40px auto;
 }
-.owner-1{
+
+.story-box .top {
+  margin-bottom: 30px;
+}
+
+.story-box h1 {
+  font-size: xx-large;
+  margin-bottom: 30px;
   
-  width: 33.3%;
 }
-.story-info{
-  width: 33.3%;
+
+.story-box b {
+  font-size: large;
+  
 }
-.story-info h1{
-  padding-bottom: 20px;
+
+.owner-images {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin: 40px 0;
+  
 }
-.owner-2{
-  width: 33.3%;
+
+.owner-images .owner-1 img, .owner-images .owner-2 img {
+  border-radius: 15px;
+  width: 300px;
+  height: auto;
+
+
 }
-.owner-1 img .owner-2 img{
-  position: relative;
+
+.story-info p {
+  font-size: 1rem;
+  line-height: 1.8;
+  color: #666;
+  margin-top: 20px;
+  text-align: justify;
+  padding: 0 20px;
+}
+
+.story-box p {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  color: #444;
+  margin-top: 20px;
+  text-align: justify;
+}
+@media(max-width:768px){
+  nav ul{
+    flex-direction: column;
+    gap: 10px;
+  }
+  nav ul li{
+    border-right: none;
+    text-align: center;
+  }
+  .location-and-details-container{
+    flex-direction: column;
+    align-items: center;
+  }
+  iframe{
+    width: 100%;
+    height: 200px;
+  }
+  .owner-images{
+    flex-direction: column;
+    align-items: center;
+  }
 }
